# riemann-hypothesis-llm-exploration

./: .gitignore  404.md  CLAUDE.md  Gemfile  HARNESS.md  README.md  SPECIALISTS.md  _config.yml  index.md  robots.txt  sitemap.xml
.claude/: settings.json
_includes/: head_custom.html
attempts/: .gitkeep
background/: .gitkeep  approaches.md  definitions.md  functional_equation.md  known_results.md
en/: index.md
ko/: index.md
learnings/: .gitkeep  approaches_taxonomy.md  cross_domain_lens.md  external_critique_2026-05.md  intuition_calibration.md  specialist_consensus.md  specialist_intuition_gaps.md  sustained_research_log.md  walls.md
lemmas/: .gitkeep  dont_try_directions.md  failed_proof_catalog_publishable.md  failed_proof_categories.md  (+6 more)
papers/: INDEX.md  (+3 more)
tools/: README.md  bbm_check.py  bbm_check2.py  bell_polynomial_count.py  connes_explicit_formula.py  conrey_review_check.py  cross_check.py  entropy_evolution.py  explicit_formula_test_fn.py  fetch_paper.py  heat_flow_simulation.py  info_theoretic_zeta.py  kl_zeros_gue.py  lagarias_section5_check.py  li_criterion.py  li_lambda_curvature.py  li_rmt.py  mertens.py  modular_lattice_zeros.py  p_adic_archimedean.py  pair_correlation.py  polymath15_check.py  pratt_connes_consani_tissue.py  pyproject.toml  quantum_chaos_zeta.py  quantum_walk_zeros.py  sekatskii_c_epsilon.py  sekatskii_check.py  spacing_distribution.py  spectral_candidates_compare.py  unfolded_pc_extended.py  verify_zeros.py  voros_lagarias_tissue.py  wasserstein_evolution.py  zero_fractal_dim.py  zeros_lyapunov.py  zeta_zeros_regression.py
(+674 files in other folders)
