[project]
name = "rh-tools"
version = "0.1.0"
description = "Numerical tools for Riemann Hypothesis exploration"
requires-python = ">=3.12"
dependencies = [
    "mpmath>=1.3.0",
    "sympy>=1.13",
    "numpy>=2.0",
    "matplotlib>=3.9",
    "requests>=2.32",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
